--- a/src/main/resources/com/example/sudoku/Sudoku-view.fxml
+++ b/src/main/resources/com/example/sudoku/Sudoku-view.fxml
@@ -1,16 +1,171 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.sudoku.controller.SudokuController">
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+
+<VBox alignment="CENTER" prefHeight="480.0" prefWidth="720.0" spacing="20.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sudoku.controller.SudokuController">
   <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
   </padding>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
+        <Label text="SUDOKU">
+      <font>
+         <Font name="System Bold Italic" size="60.0" />
+      </font>
+   </Label>
+   <VBox prefHeight="200.0" prefWidth="100.0" spacing="2.0">
+      <children>
+         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="2.0">
+            <children>
+               <GridPane gridLinesVisible="true">
+                 <columnConstraints>
+                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                 </columnConstraints>
+                 <rowConstraints>
+                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                 </rowConstraints>
+                  <children>
+                     <TextField fx:id="c2F1TextField" alignment="CENTER" onInputMethodTextChanged="#onInputC2F1TextField" prefHeight="53.0" prefWidth="113.0" GridPane.columnIndex="1" />
+                     <TextField fx:id="c1F1TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC1F1TextField" prefHeight="48.0" prefWidth="113.0" />
+                     <TextField fx:id="c1F2TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC1F2TextField" prefHeight="56.0" prefWidth="124.0" GridPane.rowIndex="1" />
+                     <TextField fx:id="c2F2TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC2F2TextField" prefHeight="66.0" prefWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     <TextField fx:id="c1F3TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC1F3TextField" prefHeight="57.0" prefWidth="120.0" GridPane.rowIndex="2" />
+                     <TextField fx:id="c2F3TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC2F3TextField" prefHeight="65.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  </children>
+               </GridPane>
+               <GridPane gridLinesVisible="true" layoutX="250.0" layoutY="10.0">
+                  <columnConstraints>
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  </columnConstraints>
+                  <rowConstraints>
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  </rowConstraints>
+                  <children>
+                     <TextField fx:id="c4F1TextField" alignment="CENTER" onInputMethodTextChanged="#onInputC4F1TextField" prefHeight="53.0" prefWidth="113.0" GridPane.columnIndex="1" />
+                     <TextField fx:id="c3F1TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC3F1TextField" prefHeight="48.0" prefWidth="113.0" />
+                     <TextField fx:id="c3F2TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC3F2TextField" prefHeight="56.0" prefWidth="124.0" GridPane.rowIndex="1" />
+                     <TextField fx:id="c4F2TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC4F2TextField" prefHeight="66.0" prefWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     <TextField fx:id="c3F3TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC3F3TextField" prefHeight="57.0" prefWidth="120.0" GridPane.rowIndex="2" />
+                     <TextField fx:id="c4F3TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC4F3TextField" prefHeight="65.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  </children>
+               </GridPane>
+               <GridPane gridLinesVisible="true" layoutX="351.0" layoutY="10.0">
+                  <columnConstraints>
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  </columnConstraints>
+                  <rowConstraints>
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  </rowConstraints>
+                  <children>
+                     <TextField fx:id="c6F1TextField" alignment="CENTER" onInputMethodTextChanged="#onInputC6F1TextField" prefHeight="53.0" prefWidth="113.0" GridPane.columnIndex="1" />
+                     <TextField fx:id="c5F1TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC5F1TextField" prefHeight="48.0" prefWidth="113.0" />
+                     <TextField fx:id="c5F2TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC5F2TextField" prefHeight="56.0" prefWidth="124.0" GridPane.rowIndex="1" />
+                     <TextField fx:id="c6F2TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC6F2TextField" prefHeight="66.0" prefWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     <TextField fx:id="c5F3TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC5F3TextField" prefHeight="57.0" prefWidth="120.0" GridPane.rowIndex="2" />
+                     <TextField fx:id="c6F3TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC6F3TextField" prefHeight="65.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  </children>
+               </GridPane>
+            </children>
+            <opaqueInsets>
+               <Insets />
+            </opaqueInsets>
+         </HBox>
+         <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="200.0" spacing="2.0">
+            <children>
+               <GridPane gridLinesVisible="true">
+                  <columnConstraints>
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  </columnConstraints>
+                  <rowConstraints>
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  </rowConstraints>
+                  <children>
+                     <TextField fx:id="c2F4TextField" alignment="CENTER" onInputMethodTextChanged="#onInputC2F4TextField" prefHeight="53.0" prefWidth="113.0" GridPane.columnIndex="1" />
+                     <TextField fx:id="c1F4TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC1F4TextField" prefHeight="48.0" prefWidth="113.0" />
+                     <TextField fx:id="c1F5TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC1F5TextField" prefHeight="56.0" prefWidth="124.0" GridPane.rowIndex="1" />
+                     <TextField fx:id="c2F5TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC2F5TextField" prefHeight="66.0" prefWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     <TextField fx:id="c1F6TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC1F6TextField" prefHeight="57.0" prefWidth="120.0" GridPane.rowIndex="2" />
+                     <TextField fx:id="c2F6TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC2F6TextField" prefHeight="65.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  </children>
+               </GridPane>
+               <GridPane gridLinesVisible="true" layoutX="250.0" layoutY="10.0">
+                  <columnConstraints>
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  </columnConstraints>
+                  <rowConstraints>
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  </rowConstraints>
+                  <children>
+                     <TextField fx:id="c4F4TextField" alignment="CENTER" onInputMethodTextChanged="#onInputC4F4TextField" prefHeight="53.0" prefWidth="113.0" GridPane.columnIndex="1" />
+                     <TextField fx:id="c3F4TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC3F4TextField" prefHeight="48.0" prefWidth="113.0" />
+                     <TextField fx:id="c3F5TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC3F5TextField" prefHeight="56.0" prefWidth="124.0" GridPane.rowIndex="1" />
+                     <TextField fx:id="c4F5TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC4F5TextField" prefHeight="66.0" prefWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     <TextField fx:id="c3F6TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC3F6TextField" prefHeight="57.0" prefWidth="120.0" GridPane.rowIndex="2" />
+                     <TextField fx:id="c4F6TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC4F6TextField" prefHeight="65.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  </children>
+               </GridPane>
+               <GridPane gridLinesVisible="true" layoutX="351.0" layoutY="10.0">
+                  <columnConstraints>
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  </columnConstraints>
+                  <rowConstraints>
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  </rowConstraints>
+                  <children>
+                     <TextField fx:id="c6F4TextField" alignment="CENTER" onInputMethodTextChanged="#onInputC6F4TextField" prefHeight="53.0" prefWidth="113.0" GridPane.columnIndex="1" />
+                     <TextField fx:id="c5F4TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC5F4TextField" prefHeight="48.0" prefWidth="113.0" />
+                     <TextField fx:id="c5F5TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC5F5TextField" prefHeight="56.0" prefWidth="124.0" GridPane.rowIndex="1" />
+                     <TextField fx:id="c6F5TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC6F5TextField" prefHeight="66.0" prefWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     <TextField fx:id="c5F6TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC5F6TextField" prefHeight="57.0" prefWidth="120.0" GridPane.rowIndex="2" />
+                     <TextField fx:id="c6F6TextField" alignment="CENTER" layoutX="10.0" layoutY="13.0" onInputMethodTextChanged="#onInputC6F6TextField" prefHeight="65.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  </children>
+               </GridPane>
+            </children>
+            <opaqueInsets>
+               <Insets />
+            </opaqueInsets>
+         </HBox>
+      </children>
+   </VBox>
+   <HBox alignment="CENTER" prefHeight="72.0" prefWidth="680.0" spacing="40.0">
+      <children>
+         <Button fx:id="inicioButton" onAction="#onInicioButtonClick" prefHeight="63.0" prefWidth="127.0" text="INICIO" textFill="#308210">
+            <font>
+               <Font name="System Bold" size="24.0" />
+            </font>
+         </Button>
+        <Button fx:id="ayudaButton" onAction="#onAyudaButtonClick" prefHeight="63.0" prefWidth="127.0" text="AYUDA" textFill="#01679a">
+            <font>
+               <Font name="System Bold" size="24.0" />
+            </font>
+         </Button>
+      </children>
+   </HBox>
 </VBox>
